# CAMB

./: .augment-guidelines  .fortls  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  AI_notes.txt  CONTRIBUTING.md  DarkAge21cm.f90  DarkEnergyFluid.f90  DarkEnergyInterface.f90  DarkEnergyPPF.f90  DarkEnergySimple.f90  Dockerfile  InitialPower.f90  LICENCE.txt  MANIFEST.in  Makefile  Makefile_main  MathUtils.f90  Matrix_utils.F90  README.rst  SeparableBispectrum.F90  SeparableBispectrum.f90  base_planck_lowl_lowLike.ini  base_plikHM_TT_lowTEB_lensing.ini  base_plikHM_TT_lowTEB_lensing_params.ini  bessels.f90  camb.cbp  camb.dsp  camb.f90  camb.py  camb.vfproj  camb_python.f90  classes.f90  cmbmain.f90  config  config.f90  (+47 more)
.binder/: requirements.txt
.devcontainer/: Dockerfile  README.md  devcontainer.json
.devcontainer/scripts/: install-recombination-deps.sh  post-create.sh  post-start.sh
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_wheels.yml  test_fortran.yml  tests.yml
CAMB/: .gitattributes  .gitmodules  .readthedocs.yml  Dockerfile  requirements.txt
CAMB/camb/: __init__.py  _command_line.py  baseconfig.py  bbn.py  bispectrum.py  camb.py  constants.py  correlations.py  dark_energy.py  emission_angle.py  initialpower.py  mathutils.py  model.py  reionization.py  sources.py  symbolic.py
CAMB/docs/: ScalEqs.html  ScalEqs.ipynb
CAMB/fortran/: DarkEnergyFluid.f90  DarkEnergyInterface.f90  DarkEnergyPPF.f90  DarkEnergyQuintessence.f90  InitialPower.f90  Makefile_main  SecondOrderPK.f90  SourceWindows.f90  cmbmain.f90  cosmorec.f90  halofit.f90  lensing.f90  model.f90  readme.html  reionization.f90  results.f90  subroutines.f90
CAMB/inifiles/: params.ini  planck_2018.ini
VisualStudio/: CAMB.sln  CAMBLib.vfproj  CAMBLib_ppf.vfproj  CAMB_devel.vfproj  CAMBdll.vfproj  MatrixDouble.vfproj  MatrixSingle.vfproj  SharedObj.vfproj  SharedUtils.vfproj
camb/: __init__.py  _command_line.py  _compilers.py  _config.py  _ini.py  active_eigenvectors.py  active_sources.py  baseconfig.py  bbn.py  bispectrum.py  camb.py  check_accuracy.py  constants.py  correlations.py  dark_energy.py  emission_angle.py  inifile.py  initialpower.py  mathutils.py  model.py  nonlinear.py  postborn.py  recombination.py  reionization.py  results.py  sources.py  symbolic.py
camb/tests/: _spk_helpers.py  camb_test.py  camb_test_hmcode.py  camb_test_slow.py  conftest.py  hmcode_test.py  spk_test.py  spk_validation_plots.py
camb_tests/: camb_test.py
docs/: CAMBdemo.html  CAMBdemo.ipynb  README_pypi.rst  SPk_demo.ipynb  ScalEqs.html  ScalEqs.ipynb  index.html  markdown_builder.py  requirements.txt
docs/changelog/: HighL_accuracy_stability.md  HighL_accuracy_stability_followup.md  lensing_curv_corr_direct.md  lmax_settings.md  nonflat_integration.md  ppf_gamma_evolution_limit.md  recfast_rosenbrock.md  variable_redefinitions.md
docs/source/: bbn.rst  camb.rst  check_accuracy.rst  conf.py  correlations.rst  dark_energy.rst  emission_angle.rst  fortran_compilers.rst  index.rst  initialpower.rst  mathutils.rst  modifying_code.rst  nonlinear.rst  postborn.rst  recombination.rst  reionization.rst  results.rst  sources.rst  symbolic.rst  transfer_variables.rst  variables_guide.rst
examples/: README.md  plot_weibull_reionization.py
fortran/: .#halofit.f90  ActiveSources.f90  DarkAge21cm.f90  DarkEnergyFluid.f90  DarkEnergyInterface.f90  DarkEnergyPPF.f90  DarkEnergyQuintessence.f90  ExternalNonLinearRatio.f90  InitialPower.f90  Makefile  Makefile_main  MathUtils.f90  PowellConstrainedMinimize.f90  PowellMinimize.f90  RungeKuttaDP45.f90  SPkNonLinear.f90  SecondOrderPK.f90  SeparableBispectrum.f90  SourceWindows.f90  bessels.f90  camb.cbp  camb.f90  camb_python.f90  classes.f90  cmbmain.f90  config.f90  constants.f90  cosmorec.f90  equations.f90  halofit.f90  hyrec.f90  inidriver.f90  lensing.f90  massive_neutrinos.f90  model.f90  readme.html  recfast.f90  reionization.f90  results.f90  sigma8.f90  (+4 more)
fortran/VisualStudio/: CAMB.sln  CAMB.vfproj  CAMBLib.vfproj  CAMBdll.vfproj
fortran/tests/: CAMB_test_files.py  inifile.py  run_high_accuracy_tests.py  run_tests.py  run_tests.sh
inifiles/: params.ini  params_21cm.ini  params_counts.ini  params_lensing.ini  params_spk.ini  params_weibull_reionization.ini  planck_2018.ini  planck_2018_acc.ini  sources_defaults.ini
julia/: CAMB.jl  Project.toml  README.md  background_cache.jl  bessels.jl  config.jl  constants.jl  initial_power.jl  nonlinear.jl  params.jl  reionization.jl  results.jl  transfer.jl
julia/examples/: plots.jl
julia/src/: math_utils.jl
julia/test/: runtests.jl
pycamb/: MANIFEST.in  README.rst  makepypi  requirements.txt  setup.py
pycamb/camb/: __init__.py  _config.py  baseconfig.py  bbn.py  bispectrum.py  camb.py  constants.py  correlations.py  dark_energy.py  emission_angle.py  initialpower.py  lensing.py  mathutils.py  model.py  nonlinear.py  postborn.py  recombination.py  reionization.py  sources.py  symbolic.py
pycamb/camb_tests/: camb_test.py
pycamb/docs/: CAMBdemo.html  CAMBdemo.ipynb  ScalEqs.html  ScalEqs.ipynb  index.html
python/: CAMB_test_files.py  CLCompare.py  cambPlots.py  covCompare.py  iniFile.py
strings/: string_correlators.py  test_Cl.py  test_Cl_old.py  test_data_transfer.py
test_CAMB/: .gitignore  Makefile  readme.md
test_CAMB/parameters/: 1_default.ini
test_CAMB/script/: compare_legacy.sh  create_spectra.sh  run_benchmarks.sh  run_profile.sh
testfiles/test_outputs/: params_HMcode_params.ini  (+1 more)
tests/: CAMB_test_files.py  Dockerfile  run_tests.sh  upload_tests.sh
utils/: ArrayUtils.f90  FileUtils.f90  IniObjects.f90  Makefile  MatrixUtils.f90  MiscUtils.f90  MpiUtils.f90  ObjectLists.f90  RandUtils.f90  RangeUtils.f90  StringUtils.f90
(+34 files in other folders)
