[build-system]
requires = ["setuptools>=77", "packaging>=24", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camb"
authors = [
    { name = "Antony Lewis" },
]
description = "Code for Anisotropies in the Microwave Background"
keywords = ['cosmology', 'CAMB', 'CMB']
readme = "docs/README_pypi.rst"
license = "LicenseRef-LGPLv3-arxiv"
license-files = ["LICENCE.txt"]
dynamic = ["version"]
requires-python = ">=3.10.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "numpy", "scipy>=1.0", "sympy>=1.0", "packaging>=24"
]

[project.optional-dependencies]
docs = ["sphinx>=4.0", "sphinx_rtd_theme>=1.0", "sphinxcontrib-jquery", "sphinx_markdown_builder", "jupytext"]

[project.scripts]
camb = "camb._command_line:run_command_line"

[project.urls]
Homepage = "https://camb.info"
Documentation = "https://camb.readthedocs.io"
Source = "https://github.com/cmbant/camb"
Tracker = "https://github.com/cmbant/camb/issues"
Licensing = "https://github.com/cmbant/camb/blob/master/LICENCE.txt"

[tool.setuptools.dynamic]
version = { attr = "camb.__version__" }

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W"]

[tool.ruff.lint.per-file-ignores]
"camb/__init__.py" = ["F401"]
"camb/camb.py" = ["F401"]
"camb/results.py" = ["F401"]
"docs/CAMBdemo.ipynb" = ["F401"]
"docs/ScalEqs.ipynb" = ["F401"]